# CanteenBot

./: CMakeLists.txt  Doxyfile  README.md  built2.bat  make_lib.bat
TgBot/: test.db
TgBot/src/: source.cpp
lib/: libcurl_a.lib  sqlite3.h  sqlite3.lib
